
==== version history of distribution Dancer2-Plugin-LogReport

Unless noted otherwise, these changes where initiated and applied by
Mark Overmeer.

version 2.02:

version 2.01: Wed  5 Nov 17:35:44 CET 2025

	Fixes:
	- test module use for Dancer/Dancer2 only when they are installed.
	  reported by [Andy Beverley]

version 2.00: Tue  4 Nov 16:45:48 CET 2025

	Fixes:
	- do not leak internal error messages to end-users [Andy Beverly]

	Extracted the Dancer modules from the Log-Report and
	Log-Report-Template distributions.
